2003-04-19  Gre7g Luterman <gre7g@wolfhome.com>

	* Removed getuserinfo-vpopmail.sh

	It turns out that we can't do stubs with shell scripts due to
	permission problems.  This is being replaced with a Python stub in the
	tmda-cgi/stubs directory.

2003-04-09  Gre7g Luterman <gre7g@wolfhome.com>

	* getuserinfo-vpopmail.sh: New file from Jesse Guardiani.

	This stub file converts the output of /home/vpopmail/bin/vuserinfo
	into a format used by tmda-cgi.

2003-04-08  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* smtp-check-sender: New file.

2003-03-24  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* collectaddys: Use a dictionary instead of a list to guarantee
	uniqueness.
	
2003-03-18  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* update-internaldomains: New script from Jesse Guardiani.
	Removed vipmap-to-authmap.

2003-02-20  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* tofmipd.init, tofmipd.sysconfig, cgi/tmda-cgi.conf: New support
	files for making tmda-ofmipd run as a system daemon in the
	SysV/RedHat style.

2003-02-03  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* sendit.sh: New script from Jesse Guardiani that allows sqwebmail
	to send mail using tmda-sendmail.

	* vipmap-to-authmap: New script from Jesse Guardiani for
	converting vpopmail 'vipmap' output into tmda-ofmipd's 'ipauthmap'
	file.

2003-02-03  Tim Legant  <tim@catseye.net>

	* vpopmail-vdir.sh (VUSERINFO): Changed the path from a hard-coded
	/home/vpopmail to ~vpopmail.  This should work on most systems,
	regardless of where vpopmail is installed.

2003-01-20  Tim Legant  <tim@catseye.net>

	* vmailmgr-vdir.sh: Script to print virtual email user's homedir.
	Works with the VMailMgr virtual domain add-on to qmail.

	* vpopmail-vdir.sh: Script to print virtual email user's homedir.
	Works with the VPopMail virtual domain add-on to qmail.

2002-11-13  Josh  <huber@alum.wpi.edu>

	* tmda.el: Made the changelist processing faster.
